--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <!-- reset css -->
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <!-- file style -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>
       90.1 Project 01 - Hướng dẫn chuyển thiết kế Figma sang HTML và tạo website
       thực tế từ A đến Z
@@ -11,5 +14,6 @@
   </head>
   <body>
     <h1>figma to html</h1>
+    <h2>demo</h2>
   </body>
 </html>
