--- a/index.html
+++ b/index.html
@@ -183,13 +183,17 @@
               /></a>
               <div class="info">
                 <div class="head">
-                  <h3 class="title"><a href="#!">Basic web design</a></h3>
+                  <h3 class="title">
+                    <a href="#!" class="line-clamp break-all"
+                      >Basic web design</a
+                    >
+                  </h3>
                   <div class="rating">
                     <img src="./assets/icon/Star.svg" alt="" class="star" />
                     <span class="varlue">4.5</span>
                   </div>
                 </div>
-                <p class="desc">
+                <p class="desc line-clamp line-2 break-all">
                   Get the best course, gain knowledge and shine for your future
                   career.
                 </p>
@@ -209,13 +213,15 @@
               /></a>
               <div class="info">
                 <div class="head">
-                  <h3 class="title"><a href="#!">UI/UX design</a></h3>
+                  <h3 class="title">
+                    <a href="#!" class="line-clamp break-all">UI/UX design</a>
+                  </h3>
                   <div class="rating">
                     <img src="./assets/icon/Star.svg" alt="" class="star" />
                     <span class="varlue">4.5</span>
                   </div>
                 </div>
-                <p class="desc">
+                <p class="desc line-clamp line-2 break-all">
                   Get the best course, gain knowledge and shine for your future
                   career.
                 </p>
@@ -235,13 +241,15 @@
               /></a>
               <div class="info">
                 <div class="head">
-                  <h3 class="title"><a href="#!">Web App design</a></h3>
+                  <h3 class="title">
+                    <a href="#!" class="line-clamp break-all">Web App design</a>
+                  </h3>
                   <div class="rating">
                     <img src="./assets/icon/Star.svg" alt="" class="star" />
                     <span class="varlue">4.5</span>
                   </div>
                 </div>
-                <p class="desc">
+                <p class="desc line-clamp line-2 break-all">
                   Get the best course, gain knowledge and shine for your future
                   career.
                 </p>
@@ -249,6 +257,109 @@
                   <span class="price">$120.75</span>
                   <button class="btn btn-book">Book Now</button>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- feedback -->
+      <div class="feedback">
+        <div class="main-content">
+          <div class="feedback-list">
+            <!-- item 1 -->
+            <div class="feedback-item">
+              <!-- khối bên trái -->
+              <div class="info">
+                <img
+                  src="./assets/img/ava1.jpg"
+                  alt="Peter Moor"
+                  class="avata"
+                />
+                <p class="member-name">Peter Moor</p>
+                <p class="desc">Student of Web Design</p>
+                <div class="dots">
+                  <span class="dot active"></span>
+                  <span class="dot"></span>
+                  <span class="dot"></span>
+                </div>
+              </div>
+              <!-- khối bên phải -->
+              <div class="content">
+                <img
+                  src="./assets/icon/quotes.svg"
+                  alt=""
+                  class="open-quotes"
+                />
+                <blockquote>
+                  Not only does my resume look impressive—filled with the names
+                  and logos of world-class institutions—but these certificates
+                  also bring me closer to my career goals by validating the
+                  skills I've learned."
+                </blockquote>
+              </div>
+            </div>
+            <!-- item 2 -->
+            <div class="feedback-item">
+              <!-- khối bên trái -->
+              <div class="info">
+                <img
+                  src="./assets/img/ava2.jpg"
+                  alt="Peter Moor"
+                  class="avata"
+                />
+                <p class="member-name">Peter Moor</p>
+                <p class="desc">Student of Web Design</p>
+                <div class="dots">
+                  <span class="dot"></span>
+                  <span class="dot active"></span>
+                  <span class="dot"></span>
+                </div>
+              </div>
+              <!-- khối bên phải -->
+              <div class="content">
+                <img
+                  src="./assets/icon/quotes.svg"
+                  alt=""
+                  class="open-quotes"
+                />
+                <blockquote>
+                  Not only does my resume look impressive—filled with the names
+                  and logos of world-class institutions—but these certificates
+                  also bring me closer to my career goals by validating the
+                  skills I've learned."
+                </blockquote>
+              </div>
+            </div>
+            <!-- item 3 -->
+            <div class="feedback-item">
+              <!-- khối bên trái -->
+              <div class="info">
+                <img
+                  src="./assets/img/ava3.jpg"
+                  alt="Peter Moor"
+                  class="avata"
+                />
+                <p class="member-name">Peter Moor</p>
+                <p class="desc">Student of Web Design</p>
+                <div class="dots">
+                  <span class="dot"></span>
+                  <span class="dot"></span>
+                  <span class="dot active"></span>
+                </div>
+              </div>
+              <!-- khối bên phải -->
+              <div class="content">
+                <img
+                  src="./assets/icon/quotes.svg"
+                  alt=""
+                  class="open-quotes"
+                />
+                <blockquote>
+                  Not only does my resume look impressive—filled with the names
+                  and logos of world-class institutions—but these certificates
+                  also bring me closer to my career goals by validating the
+                  skills I've learned."
+                </blockquote>
               </div>
             </div>
           </div>
